--- a/user_side/templates/base.html
+++ b/user_side/templates/base.html
@@ -58,8 +58,7 @@
           </div>
 
           <div class="row justify-content-center text-center">
-            INFERNO Copyright © 2021 Inferno - All rights reserved || Designed
-            By: Mahesh
+            All rights reserved 
           </div>
         </div>
       </footer>
