--- a/user_side/templates/base.html
+++ b/user_side/templates/base.html
@@ -42,7 +42,7 @@
       <footer>
         <div class="footer">
           <div class="row d-inline">
-            <a href="#" class="mx-3"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.facebook.com/people/Lapu-Lapu-City-Tourism-Office/61565376358239/?_rdr" class="mx-3"><i class="fab fa-facebook-f"></i></a>
             <a href="#" class="mx-3"><i class="fab fa-instagram"></i></a>
             <a href="#" class="mx-3"><i class="fab fa-youtube"></i></a>
             <a href="#" class="mx-3"><i class="fab fa-twitter"></i></a>
