--- a/user_side/templates/base.html
+++ b/user_side/templates/base.html
@@ -18,15 +18,15 @@
         <div class="navbar-logo">
           <a href="{% url 'home' %}" style="text-decoration: none; display: inline-flex; align-items: center; color: inherit;">
             <img src="{% static '/assets/logo.png' %}" alt="logo" />
-            <span style="font-size: 1.25rem; font-weight: 500; color: #333;">Lapu-Lapu City Tourism</span>
+            <span style="font-size: 1.25rem; font-weight: 500; color: #333;">LLC TOURISM</span>
           </a>
         </div>        
         <nav class="navbar-links">
-          <a href="{% url 'user_side_destination_list' %}">Destinations</a>
-          <a href="{% url 'activity' %}">Activities</a>
-          <a href="{% url 'accommodation' %}">Accommodations</a>
-          <a href="{% url 'food' %}">Food &amp; Drinks</a>
-          <a href="#chat">Let's Chat!</a>
+          <a href="{% url 'user_side_destination_list' %}">DESTINATIONS</a>
+          <a href="{% url 'activity' %}">ACTIVITIES</a>
+          <a href="{% url 'accommodation' %}">ACCOMMODATIONS</a>
+          <a href="{% url 'food' %}">FOOD &amp; DRINKS</a>
+          <a href="#chat">LET'S CHAT!</a>
         </nav>
       </header>
 
