--- a/css/user/home.css
+++ b/css/user/home.css
@@ -22,23 +22,25 @@
   /* Navbar Styling */
 .navbar {
   height: 70px;
-  position: fixed; /* Ensures the navbar stays fixed at the top */
-  top: 0;          /* Aligns it to the top of the screen */
-  left: 0;         /* Aligns it to the left of the screen */
-  width: 100%;     /* Spans the full width of the screen */
+  position: fixed; 
+  top: 0;          
+  left: 0;         
+  width: 100%;     
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color:white;
-  z-index: 1000;   /* Ensures the navbar is above other elements */
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Optional: slight shadow */
+  z-index: 1000;   
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); 
   font-family: 'barabara-final', sans-serif;
   padding:0 15px;
+  box-sizing: border-box;
 }
 
 .navbar-logo {
   display: flex;
   align-items: center;
+  flex-shrink: 0;
   padding-right: 15px;
 }
 
@@ -58,19 +60,22 @@
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: inherit; /* Maintain text color */
+  color: inherit; 
 }
 
 .scroll-to-top img {
-  margin-right: 10px; /* Space between logo and text */
+  margin-right: 10px; 
 }
 
 .navbar-links {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap; /* Allow items to wrap */
-    gap: 10px; /* Add spacing between items */
+    flex-wrap: wrap; 
+    gap: 10px; 
+    flex-grow: 1; 
+    flex-wrap: nowrap; 
+    overflow: hidden;
 }
 
 .navbar-links a {
@@ -81,7 +86,6 @@
     transition: background-color 0.3s, font-size 0.3s;
     text-align: center;
     flex: 1; /* Allow items to shrink and grow */
-    max-width: 120px; /* Prevent items from being too wide */
 }
 
 .navbar-links a:hover {
@@ -479,23 +483,40 @@
     }
 }
 
+/* MOBILE */
 @media (max-width: 480px) {
-    .navbar-links a {
-        font-size: 12px; /* Further reduce font size */
-        padding: 5px 8px; /* Smaller padding */
+    .navbar {
+        height: auto; 
+        padding: 0 10px; 
       }
     
-      .navbar-logo img {
-        width: 50px; /* Smaller logo */
+    .navbar-logo img {
+        width: 50px; 
         height: 50px;
+        margin-left: 5px; 
+        margin-top: 0;
       }
     
-      .navbar-logo span {
-        font-size: 16px; /* Adjust logo text size */
+    .navbar-logo span {
+        font-size: 14px; 
+      }
+    
+    .navbar-links {
+        gap: 5px; 
+      }
+    
+    .navbar-links a {
+        font-size: 12px; 
+        padding: 5px 8px; 
+        white-space: nowrap; 
+      }
+    
+    .navbar-links a[href="#chat"] {
+        padding: 10px 15px; 
       }
 
     .col-auto {
-        width: 100%; /* Show 1 per row on very small screens */
+        width: 100%; 
     }
     
     .circle-image-wrapper {
