--- a/css/user/home.css
+++ b/css/user/home.css
@@ -26,8 +26,8 @@
   top: 0;          
   left: 0;         
   width: 100%;     
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: auto 1fr;
   align-items: center;
   background-color:white;
   z-index: 1000;   
@@ -69,24 +69,21 @@
 
 .navbar-links {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     flex-wrap: wrap; 
     gap: 10px; 
-    flex-grow: 1; 
     flex-wrap: nowrap; 
     overflow: hidden;
-    max-width: 800px;
 }
 
 .navbar-links a {
     color: #1D519E;
     text-decoration: none;
-    padding: 10px 15px; /* Adjust padding for smaller screens */
-    font-size: 16px; /* Reduce font size */
+    padding: 10px 15px; 
+    font-size: 16px; 
     transition: background-color 0.3s, font-size 0.3s;
     text-align: center;
-    flex: 1; /* Allow items to shrink and grow */
 }
 
 .navbar-links a:hover {
