--- a/user_side/templates/base.html
+++ b/user_side/templates/base.html
@@ -18,7 +18,7 @@
         <div class="navbar-logo">
           <a href="{% url 'home' %}" style="text-decoration: none; display: inline-flex; align-items: center; color: inherit;">
             <img src="{% static '/assets/logo.png' %}" alt="logo" />
-            <span style="font-size: 1.25rem; font-weight: 500; color: #333;">LLC TOURISM</span>
+            <span style="font-size: 20px; font-weight: 500; color: #333;">LLC TOURISM</span>
           </a>
         </div>        
         <nav class="navbar-links">
