--- a/css/user/chatbox.css
+++ b/css/user/chatbox.css
@@ -17,7 +17,7 @@
 /* Chatbot header */
 #chatbot_header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 0px 15px; /* Decrease padding */
   background-color: #007bff;
@@ -27,7 +27,7 @@
 }
 
 #chatbot_title {
-  font-size: 16px; /* Decrease font size */
+  font-size: 16px; 
   font-weight: bold;
   white-space: nowrap;
 }
@@ -36,7 +36,7 @@
   background: none;
   border: none;
   color: #fff;
-  font-size: 18px; /* Decrease font size */
+  font-size: 18px; 
   cursor: pointer;
 }
 
@@ -57,6 +57,23 @@
   display: flex;
   align-items: flex-start;
   margin-bottom: 10px;
+}
+
+/* Align user messages to the right */
+.chat_message.user_message {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end; 
+  margin-bottom: 10px;
+}
+
+.chat_message.user_message p {
+  background-color: #ccc;
+  padding: 8px;
+  border-radius: 10px;
+  max-width: 70%;
+  word-wrap: break-word;
+  font-size: 12px;
 }
 
 .chatbot_message .profile_pic {
@@ -80,7 +97,6 @@
 #chatbot_title_with_pic {
   display: flex;
   align-items: center;
-  gap: 5px;
   margin-right: 10px;
 }
 
