--- a/user_side/templates/base.html
+++ b/user_side/templates/base.html
@@ -26,7 +26,7 @@
           <a href="{% url 'activity' %}">ACTIVITIES</a>
           <a href="{% url 'accommodation' %}">ACCOMMODATIONS</a>
           <a href="{% url 'food' %}">FOOD &amp; DRINKS</a>
-          <a href="#chat">LET'S CHAT!</a>
+          <button id="chat_button" class="chat-button" onclick="toggleChatbot()"><span class="chat-text">LET'S CHAT!</span></button>
         </nav>
       </header>
 
@@ -65,5 +65,6 @@
     </main>
     </style>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static '/chatbot.js'  %}"></script>
   </body>
 </html>
